# vultex

./: .clang-tidy  .dir-locals.el  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  logger.cpp  logger.hpp  main.cpp  vulkan_debug.cpp  vulkan_debug.hpp  vulkan_property_support_info.cpp  vulkan_property_support_info.hpp  vultex.org  window.cpp
src/gfx/: api.hpp  graphics.cpp  graphics.hpp
src/gfx/vulkan/: vulkan.cpp  vulkan.hpp
src/gfx/vulkan/details/: debug.cpp  debug.hpp  property_support_info.cpp  property_support_info.hpp
src/ui/: window.cpp  window.hpp
src/utility/: logger.cpp  logger.hpp
src/vulkan/: debug.cpp  debug.hpp  property_support_info.cpp  property_support_info.hpp  vulkan.cpp  vulkan.hpp
src/vulkan/details/: debug.cpp  debug.hpp  property_support_info.cpp  property_support_info.hpp
